Readmes and cleanups to make scripts.

--- a/x86model/fuzz/Makefile
+++ b/x86model/fuzz/Makefile
@@ -1,15 +1,8 @@
-all: test_step 
-
-test_step: ./Fuzz.vo
+fuzzgen.native: Fuzz.vo fuzzgen.ml
 	ocamlbuild -cflag -g -lflag -g fuzzgen.native -lib unix -lib nums
 
-
-./Fuzz.vo: ./Fuzz.v
-	echo 'Require Import Fuzz. Extraction Blacklist String List. Extraction Library Fuzz.' > tmp1.v
-	make -C "../"
-	coqc tmp1.v -I "../Model/"
-
-./Fuzz.v:
+Fuzz.vo: Fuzz.v
+	coqc Fuzz.v -I "../Model/"
 
 extract-nob::
 	echo 'Require Import Fuzz. Extraction Blacklist String List. Recursive Extraction Library Fuzz.' > tmp1.v
@@ -22,17 +15,13 @@ extract-nob::
 
 extraction:: 
 	echo 'Require Import Fuzz. Extraction Blacklist String List. Recursive Extraction Library Fuzz.' > tmp1.v
-	make -C "../"
+	make -C "../Model/"
 	coqc Fuzz.v -I "../Model/"
 	coqc tmp1.v -I "../Model/"
 	cp Parser.ml_fastarray Parser.ml
 	rm Parser.mli
 	rm *.mli
 	cp cZeven.ml Zeven.ml
-
-opt::
-	ocamlbuild -cflag -g -lflag -g test.native -lib unix -lib nums
-	
 
 clean::
 	rm -rf _build/
