Includes floating-point model with revised syntax, decode, and semantics (now supports 64-bit and 80-bit memory operands).

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,4 +1,4 @@
-MODULES := Coqlib Tacs Maps Bits X86Syntax Monad Parser Decode RTL X86Semantics CheckDeterministic  
+MODULES := Coqlib Tacs Maps Bits X86SyntaxWithFloat Monad Parser DecodeWithFloat RTLWithFloat X86SemanticsWithFloat CheckDeterministic  
 # DFACorrectness FastVerifier X86Lemmas VerifierCorrectness
 VS 	:= $(MODULES:%=%.v)
 
