* adjusted the makefile * modified the files for floating point semantics so that it can load   the flocq library from the standard coq user-contrib directory.

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,5 +1,9 @@
-MODULES := Coqlib Tacs Maps Bits X86SyntaxWithFloat Monad Parser DecodeWithFloat RTLWithFloat X86SemanticsWithFloat CheckDeterministic  
-# DFACorrectness FastVerifier X86Lemmas VerifierCorrectness
+# Note: you first need to install the flocq library under the flocq-2.1.0 directory;
+# just go to that directory and follow the instructions in INSTALL
+
+MODULES := Coqlib Tacs Maps Bits X86Syntax Monad Parser Decode RTL FloatingAux X86Semantics 
+# CheckDeterministic
+# CheckDeterministic now fails after adding decoding for floating-point instructions; need to fix this
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
