Fixed the last thing that made CheckDeterministic.v fail: WAIT and FWAIT are the same instruction with the same encoding; removed WAIT.

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,9 +1,7 @@
 # Note: you first need to install the flocq library under the flocq-2.1.0 directory;
 # just go to that directory and follow the instructions in INSTALL
 
-MODULES := Coqlib Tacs Maps Bits X86Syntax Monad Parser Decode RTL FloatingAux X86Semantics 
-# CheckDeterministic
-# CheckDeterministic now fails after adding decoding for floating-point instructions; need to fix this
+MODULES := Coqlib Tacs Maps Bits X86Syntax Monad Parser Decode RTL FloatingAux X86Semantics CheckDeterministic
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
