--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,7 +1,7 @@
 # Note: you first need to install the flocq library under the flocq-2.1.0 directory;
 # just go to that directory and follow the instructions in INSTALL
 
-MODULES := Coqlib Tacs Maps Bits X86Syntax Monad Parser Decode RTL FloatingAux X86Semantics CheckDeterministic
+MODULES := Coqlib Tacs Maps Bits X86Syntax Monad Parser Decode RTL FloatingAux X86Semantics CheckDeterministic NewParser
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
