--- a/x86model/Model/flocq-2.1.0/src/Makefile
+++ b/x86model/Model/flocq-2.1.0/src/Makefile
@@ -44,20 +44,20 @@ CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/gtan/x86model/flocq-2.1.0/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /home/gtan/x86model/flocq-2.1.0/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/gtan/x86model/flocq-2.1.0/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/gtan/x86model/flocq-2.1.0/missing --run automake-1.11
-AWK = gawk
+AUTOCONF = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run autoconf
+AUTOHEADER = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run autoheader
+AUTOMAKE = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run automake-1.11
+AWK = awk
 COQC = coqc
 COQDEP = coqdep
 COQDOC = coqdoc
 COQRFLAG = -R . Flocq
 CYGPATH_W = echo
 DEFS = -DPACKAGE_NAME=\"Flocq\" -DPACKAGE_TARNAME=\"flocq\" -DPACKAGE_VERSION=\"2.1.0\" -DPACKAGE_STRING=\"Flocq\ 2.1.0\" -DPACKAGE_BUGREPORT=\"Sylvie\ Boldo\ \<sylvie.boldo@inria.fr\>,\ Guillaume\ Melquiond\ \<guillaume.melquiond@inria.fr\>\" -DPACKAGE_URL=\"\" -DPACKAGE=\"flocq\" -DVERSION=\"2.1.0\"
-ECHO_C = 
-ECHO_N = -n
+ECHO_C = \c
+ECHO_N = 
 ECHO_T = 
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
@@ -67,8 +67,8 @@ INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/gtan/x86model/flocq-2.1.0/missing --run makeinfo
-MKDIR_P = /bin/mkdir -p
+MAKEINFO = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run makeinfo
+MKDIR_P = .././install-sh -c -d
 PACKAGE = flocq
 PACKAGE_BUGREPORT = Sylvie Boldo <sylvie.boldo@inria.fr>, Guillaume Melquiond <guillaume.melquiond@inria.fr>
 PACKAGE_NAME = Flocq
@@ -78,13 +78,13 @@ PACKAGE_URL =
 PACKAGE_VERSION = 2.1.0
 PATH_SEPARATOR = :
 SET_MAKE = 
-SHELL = /bin/bash
+SHELL = /bin/sh
 STRIP = 
 VERSION = 2.1.0
-abs_builddir = /home/gtan/x86model/flocq-2.1.0/src
-abs_srcdir = /home/gtan/x86model/flocq-2.1.0/src
-abs_top_builddir = /home/gtan/x86model/flocq-2.1.0
-abs_top_srcdir = /home/gtan/x86model/flocq-2.1.0
+abs_builddir = /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/src
+abs_srcdir = /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/src
+abs_top_builddir = /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0
+abs_top_srcdir = /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0
 am__leading_dot = .
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
@@ -100,13 +100,13 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/gtan/x86model/flocq-2.1.0/install-sh
+install_sh = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/install-sh
 libdir = `$(COQC) -where`/user-contrib/Flocq
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
 mandir = ${datarootdir}/man
-mkdir_p = /bin/mkdir -p
+mkdir_p = $(top_builddir)/./install-sh -c -d
 oldincludedir = /usr/include
 pdfdir = ${docdir}
 prefix = /usr/local
