Updated things so that simulator runs again.
Modified test.ml so that the initial machine state it starts with includes the
new floating point fields. It still doesn't check the simulated values of
floating point registers - that will come soon.

Flocq-2.1.0 defines some functions that take reals as parameters or return
reals, and it uses the axiomatic reals from the standard library. Although we
don't use these functions, previously, these unrealised axioms would be
extracted, triggering an exception.

Jacques-Henri Jourdan at Gallium ran into the same issue when Compcert switched
over to using Flocq for floating points as well. I followed his modifications
to Flocq in Compcert, which involved moving cond_Zopp from Fcore_Raux.v to
Fcore_Zaux.v.  In addition, when extracting, we must force Coq to inline these
functions (we replace them with dummy functions that raise exceptions) so that
it doesn't include the whole Reals library during extraction.

WARNING: Need to rebuild and install the modified flocq.

--- a/x86model/Model/flocq-2.1.0/src/Makefile
+++ b/x86model/Model/flocq-2.1.0/src/Makefile
@@ -44,20 +44,20 @@ CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run automake-1.11
-AWK = awk
+AUTOCONF = ${SHELL} /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run automake-1.11
+AWK = gawk
 COQC = coqc
 COQDEP = coqdep
 COQDOC = coqdoc
 COQRFLAG = -R . Flocq
 CYGPATH_W = echo
 DEFS = -DPACKAGE_NAME=\"Flocq\" -DPACKAGE_TARNAME=\"flocq\" -DPACKAGE_VERSION=\"2.1.0\" -DPACKAGE_STRING=\"Flocq\ 2.1.0\" -DPACKAGE_BUGREPORT=\"Sylvie\ Boldo\ \<sylvie.boldo@inria.fr\>,\ Guillaume\ Melquiond\ \<guillaume.melquiond@inria.fr\>\" -DPACKAGE_URL=\"\" -DPACKAGE=\"flocq\" -DVERSION=\"2.1.0\"
-ECHO_C = \c
-ECHO_N = 
+ECHO_C = 
+ECHO_N = -n
 ECHO_T = 
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
@@ -67,8 +67,8 @@ INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run makeinfo
-MKDIR_P = .././install-sh -c -d
+MAKEINFO = ${SHELL} /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/missing --run makeinfo
+MKDIR_P = /bin/mkdir -p
 PACKAGE = flocq
 PACKAGE_BUGREPORT = Sylvie Boldo <sylvie.boldo@inria.fr>, Guillaume Melquiond <guillaume.melquiond@inria.fr>
 PACKAGE_NAME = Flocq
@@ -78,13 +78,13 @@ PACKAGE_URL =
 PACKAGE_VERSION = 2.1.0
 PATH_SEPARATOR = :
 SET_MAKE = 
-SHELL = /bin/sh
+SHELL = /bin/bash
 STRIP = 
 VERSION = 2.1.0
-abs_builddir = /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/src
-abs_srcdir = /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/src
-abs_top_builddir = /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0
-abs_top_srcdir = /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0
+abs_builddir = /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/src
+abs_srcdir = /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/src
+abs_top_builddir = /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0
+abs_top_srcdir = /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0
 am__leading_dot = .
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
@@ -100,13 +100,13 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/greg_morrisett/Devel/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/install-sh
+install_sh = ${SHELL} /home/joe/GoNative/verifier/CPUmodels/x86model/Model/flocq-2.1.0/install-sh
 libdir = `$(COQC) -where`/user-contrib/Flocq
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
 mandir = ${datarootdir}/man
-mkdir_p = $(top_builddir)/./install-sh -c -d
+mkdir_p = /bin/mkdir -p
 oldincludedir = /usr/include
 pdfdir = ${docdir}
 prefix = /usr/local
