--- a/x86model/semantics_trace/simulator/Makefile
+++ b/x86model/semantics_trace/simulator/Makefile
@@ -5,23 +5,20 @@ test_step: ../../Model/X86Semantics.vo
 
 
 ../../Model/X86Semantics.vo: ../../Model/X86Semantics.v
-	echo 'Require Import X86Semantics. Extraction Blacklist String List. Extraction Library X86Semantics.' > tmp1.v
 	make -C "../../Model/"
-	coqc tmp1.v -I "../../Model/"
+	coqc extract.v -I "../../Model/"
 
 ../../Model/X86Semantics.v:
 
 extract-nob::
-	echo 'Require Import X86Semantics. Extraction Blacklist String List. Recursive Extraction Library X86Semantics.' > tmp1.v
-	coqc tmp1.v -I "../../Model/"
+	coqc extract.v -I "../../Model/"
 	cp Parser.ml_fastarray Parser.ml
 	rm Parser.mli Decode.mli
 	cp cZeven.ml Zeven.ml
 
 extraction:: 
-	echo 'Require Import X86Semantics. Extraction Blacklist String List. Recursive Extraction Library X86Semantics.' > tmp1.v
 	make -C "../../Model/"
-	coqc tmp1.v -I "../../Model/"
+	coqc extract.v -I "../../Model/"
 	cp Parser.ml_fastarray Parser.ml
 	rm Parser.mli Decode.mli
 	cp cZeven.ml Zeven.ml
