Added support for "untyped" transforms to the parsing code. This makes it to build a parsing DFA in a reasonable amount of time.  However, we still need some work to get a real parser out.  In particular, we need to prove that the untyped transforms correspond to a particular typed transform, and then use that to extract a function from the terminal states' AST grammar results to the final user results.

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,7 +1,7 @@
 # Note: you first need to install the flocq library under the flocq-2.1.0 directory;
 # just go to that directory and follow the instructions in INSTALL
 
-MODULES := Coqlib Tacs Maps Bits X86Syntax Monad Parser Decode Encode RTL FloatingAux X86Semantics CheckDeterministic NewParser
+MODULES := Coqlib Tacs Maps Bits X86Syntax Monad Parser Decode RTL FloatingAux X86Semantics CheckDeterministic NewParser NewDecode
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
