Added command-line arguments option to syntaxfuzzer, completed equivalence checker in enc_dec up through gp instructions, made a couple alterations to Encode and Decode to reconcile inconsistencies.

--- a/x86model/fuzz/instr_fuzz/Makefile
+++ b/x86model/fuzz/instr_fuzz/Makefile
@@ -1,4 +1,4 @@
-syntaxfuzzer.native: syntaxfuzzer.ml PrettyPrinter.ml
+syntaxfuzzer.native: syntaxfuzzer.ml PrettyPrinter.ml enc_dec.ml
 	ocamlbuild -verbose 1 -cflag -g -lflag -g syntaxfuzzer.native -lib unix -lib nums -Is extract
 
 debugging: extraction
