Added gdb macros to step through a test program and dump out all register info at each step

--- a/x86model/fuzz/instr_fuzz/Makefile
+++ b/x86model/fuzz/instr_fuzz/Makefile
@@ -1,6 +1,9 @@
 syntaxfuzzer.native: syntaxfuzzer.ml PrettyPrinter.ml enc_dec.ml
 	ocamlbuild -verbose 1 -cflag -g -lflag -g syntaxfuzzer.native -lib unix -lib nums -Is extract
 
+deriving::
+	cd camlp4_fuzz/deriving-master; make; make tests; make install; cd ..; cd ..
+
 debugging: extraction
 	ocamlbuild -use-ocamlfind -Is ocamlutil,extract -cflag -g -lflag -g main.native
 
