Non-essential change to the makefile; just to test the new commit script in the svn repo.

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -2,6 +2,7 @@
 # just go to that directory and follow the instructions in INSTALL
 
 MODULES := Coqlib Tacs CommonTacs Maps Bits X86Syntax Monad Parser Recognizer Decode Encode RTL FloatingAux X86Semantics ParserPrinter CheckDeterministic
+# X86Semantics ParserPrinter CheckDeterministic
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
