Progress on reify terms of rtl conversions to a Coq inductive type. Added enough cases to make conv_AAA_AAS work; still need to add other cases.

--- a/x86model/RockSalt/Makefile
+++ b/x86model/RockSalt/Makefile
@@ -1,4 +1,4 @@
-MODULES := VerifierDFA DFACorrectness NACLjmp FastVerifier X86Lemmas VerifierCorrectness
+MODULES := VerifierDFA DFACorrectness NACLjmp FastVerifier Int32 X86Lemmas VerifierCorrectness
 # DFACorrectness FastVerifier X86Lemmas VerifierCorrectness
 VS 	:= $(MODULES:%=%.v)
 
