--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,7 +1,7 @@
 # Note: you first need to install the flocq library under the flocq-2.1.0 directory;
 # just go to that directory and follow the instructions in INSTALL
 
-MODULES := Coqlib Tacs CommonTacs Maps Bits X86Syntax Monad Char Xform Parser Recognizer Decode Encode RTL FloatingAux X86Semantics CheckDeterministic
+MODULES := Coqlib Tacs CommonTacs Maps Bits X86Syntax Monad Char Xform Regexp Parser Recognizer Decode Encode RTL FloatingAux X86Semantics CheckDeterministic
 # X86Semantics ParserPrinter CheckDeterministic
 VS 	:= $(MODULES:%=%.v)
 
