* Added Extraction Implicit commands to files * Renamed Char.v to Alphabet.v because after extraction Char.ml would   conflict with the one in Ocaml's stdlib.

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,7 +1,7 @@
 # Note: you first need to install the flocq library under the flocq-2.1.0 directory;
 # just go to that directory and follow the instructions in INSTALL
 
-MODULES := Coqlib CommonTacs Maps Bits X86Syntax Monad Char Xform Regexp Grammar RESet MSetsMore ParserArg Parser Recognizer Decode Encode RTL FloatingAux X86Semantics CheckDeterministic
+MODULES := Coqlib CommonTacs Maps Bits X86Syntax Monad Alphabet Xform Regexp Grammar RESet MSetsMore ParserArg Parser Recognizer Decode Encode RTL FloatingAux X86Semantics CheckDeterministic
 # X86Semantics ParserPrinter CheckDeterministic
 VS 	:= $(MODULES:%=%.v)
 
