- Bring the RockSalt proof in VerifierCorrectness.v   up-to-date w.r.t to changes in the Model directory. - Some updates of README and INSTALL files - Added .gitignore

--- a/x86model/RockSalt/Makefile
+++ b/x86model/RockSalt/Makefile
@@ -1,5 +1,6 @@
-MODULES := VerifierDFA FastVerifier Int32 X86Lemmas NACLjmp DFACorrectness VerifierCorrectness
-# DFACorrectness X86Lemmas VerifierCorrectness
+MODULES := VerifierDFA FastVerifier Int32 X86Lemmas VerifierCorrectness
+#  NACLjmp DFACorrectness VerifierCorrectness
+
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
