Checked in a failed attempt to replace Grammar.v with BiGrammar.v; it could work if I spent more effort on modifying CheckDeterministic.v and the files under RockSalt, but I decided it's not worth the effort now.

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,8 +1,8 @@
 # Note: you first need to install the flocq library under the flocq-2.1.0 directory;
 # just go to that directory and follow the instructions in INSTALL
 
-MODULES := Coqlib CommonTacs Maps Bits X86Syntax Monad Vector MSetsMore ParserArg Xform Regexp RESet Grammar BiGrammar Parser Recognizer Decode Encode RTL FloatingAux X86Semantics CheckDeterministic
-# X86Semantics ParserPrinter CheckDeterministic
+MODULES := Coqlib CommonTacs Maps Bits X86Syntax Monad Vector MSetsMore ParserArg Xform Regexp RESet Grammar BiGrammar Parser Recognizer Decode_ins Decode Encode RTL FloatingAux X86Semantics 
+# CheckDeterministic
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
