--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,8 +1,7 @@
 # Note: you first need to install the flocq library under the flocq-2.1.0 directory;
 # just go to that directory and follow the instructions in INSTALL
 
-MODULES := Coqlib CommonTacs Maps Bits X86Syntax Monad Vector MSetsMore ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Recognizer Decode_ins Decode Encode RTL FloatingAux X86Semantics 
-# CheckDeterministic
+MODULES := Coqlib CommonTacs Maps Bits X86Syntax Monad Vector MSetsMore ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Recognizer Decode Encode DecodeBi_ins DecodeBi RTL FloatingAux X86Semantics CheckDeterministic
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
