Progress in migrating to coq 8.5 and flocq 2.5.1.

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -10,8 +10,7 @@ coq: Makefile.coq
 	$(MAKE) -f Makefile.coq
 
 Makefile.coq: Makefile $(VS:%=%)
-	echo $(VS)
-	coq_makefile $(VS) -o Makefile.coq
+	coq_makefile -R . x86model $(VS) -o Makefile.coq
 
 clean:: Makefile.coq
 	$(MAKE) -f Makefile.coq clean
