--- a/x86model/RockSalt/Makefile
+++ b/x86model/RockSalt/Makefile
@@ -1,5 +1,5 @@
-MODULES := VerifierDFA FastVerifier Int32 X86Lemmas VerifierCorrectness
-#  NACLjmp DFACorrectness VerifierCorrectness
+MODULES := VerifierDFA FastVerifier Int32 X86Lemmas VerifierCorrectness 
+  # NACLjmp DFACorrectness VerifierCorrectness
 
 VS 	:= $(MODULES:%=%.v)
 
@@ -10,7 +10,7 @@ coq: Makefile.coq
 
 Makefile.coq: Makefile $(VS:%=%)
 	echo $(VS)
-	coq_makefile -I ../Model/ $(VS) -o Makefile.coq
+	coq_makefile -R . rocksalt -R ../Model/ x86model $(VS) -o Makefile.coq
 
 clean:: Makefile.coq
 	$(MAKE) -f Makefile.coq clean
