Incorporated the coq extension library. Had to add "Coq." library name to many standard library names since they sometimes conflict with the ones in the extension library.

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,8 +1,8 @@
 # Note: you first need to install the flocq library under the flocq-2.1.0 directory;
 # just go to that directory and follow the instructions in INSTALL
 
-MODULES := Coqlib CommonTacs Maps Bits X86Syntax Monad Vector MSetsMore ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Recognizer Decode Encode DecodeBi_ins DecodeBi RTL FloatingAux X86Semantics
-# CheckDeterministic
+MODULES := Coqlib CommonTacs Maps Bits X86Syntax Monad Vector MSetsMore ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Recognizer Decode Encode RTL FloatingAux X86Semantics
+#  DecodeBi_ins DecodeBi CheckDeterministic
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
@@ -11,7 +11,7 @@ coq: Makefile.coq
 	$(MAKE) -f Makefile.coq
 
 Makefile.coq: Makefile $(VS:%=%)
-	coq_makefile -R . x86model $(VS) -o Makefile.coq
+	coq_makefile -R . X86Model $(VS) -o Makefile.coq
 
 clean:: Makefile.coq
 	$(MAKE) -f Makefile.coq clean
