--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,17 +1,16 @@
-# Note: you first need to install the flocq library under the flocq-2.1.0 directory;
-# just go to that directory and follow the instructions in INSTALL
 
-MODULES := Coqlib CommonTacs Maps Bits X86Syntax Monad Vector MSetsMore ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Recognizer Decode Encode RTL FloatingAux X86Semantics SemTests DecodeBi_ins DecodeBi
+MODULES := X86Syntax MSetsMore ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Recognizer Decode Encode RTL FloatingAux X86Semantics SemTests DecodeBi_ins DecodeBi
 # CheckDeterministic
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
 
 coq: Makefile.coq
+	$(MAKE) -C ../../shared
 	$(MAKE) -f Makefile.coq
 
 Makefile.coq: Makefile $(VS:%=%)
-	coq_makefile -R . X86Model $(VS) -o Makefile.coq
+	coq_makefile -R . X86Model -R ../../shared Shared $(VS) -o Makefile.coq
 
 clean:: Makefile.coq
 	$(MAKE) -f Makefile.coq clean
