The MIPS bigrammar finished! It took about 7 hours to go from the MIPS grammar to a bigrammar.

--- a/MIPSmodel/Makefile
+++ b/MIPSmodel/Makefile
@@ -1,4 +1,4 @@
-MODULES := MIPSSyntax ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Decode MIPSSemantics
+MODULES := MIPSSyntax ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Decode MIPSSemantics DecodeBi
 VS 	:= $(MODULES:%=%.v)
 
 .PHONY: coq clean
