Renamed DecodeBi.v and DecodeBi_ins.v and made Decode.v deprecated; added in Encoded.v an encoder based on the bigrammar.

--- a/x86model/Model/Makefile
+++ b/x86model/Model/Makefile
@@ -1,4 +1,4 @@
-MODULES := X86Syntax ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Recognizer Decode Encode X86Semantics SemTests DecodeBi_ins DecodeBi
+MODULES := X86Syntax ParserArg Xform Regexp RESet GrammarType Grammar BiGrammar Parser Recognizer X86BG_ins X86BG Encode X86Semantics SemTests Decode
 # CheckDeterministic
 VS 	:= $(MODULES:%=%.v)
 
